hphp/hack/test/typecheck/typed_locals/foreach-errors.php.exp
File "foreach-errors.php", line 6, characters 5-11:
Typing error (Typing[4110])
  File "foreach-errors.php", line 7, characters 13-18:
  Expected `string`
  File "foreach-errors.php", line 6, characters 10-11:
  But got `int`
File "foreach-errors.php", line 12, characters 5-10:
Typing error (Typing[4110])
  File "foreach-errors.php", line 10, characters 11-16:
  Expected `string`
  File "foreach-errors.php", line 12, characters 10-10:
  But got `int`
File "foreach-errors.php", line 18, characters 3-8:
Typing error (Typing[4110])
  File "foreach-errors.php", line 16, characters 13-18:
  Expected `string`
  File "foreach-errors.php", line 18, characters 8-8:
  But got `int`
File "foreach-errors.php", line 23, characters 12-13:
Typing error (Typing[4110])
  File "foreach-errors.php", line 22, characters 11-16:
  Expected `string`
  File "foreach-errors.php", line 21, characters 16-18:
  But got `int`
  File "hackarray.hhi", line 52, characters 54-54:
    via this generic `T`
  File "hackarray.hhi", line 22, characters 35-36:
    via this generic `Tv`
  File "interfaces.hhi", line 115, characters 23-24:
    via this generic `Tv`
  File "interfaces.hhi", line 92, characters 48-49:
    via this generic `Tv`
File "foreach-errors.php", line 30, characters 5-11:
Typing error (Typing[4110])
  File "foreach-errors.php", line 28, characters 11-13:
  Expected `int`
  File "foreach-errors.php", line 30, characters 10-11:
  But got `string`
